Fixed button response on mobile device

--- a/src/style.css
+++ b/src/style.css
@@ -182,7 +182,7 @@ p {
   .sky-neon:link {
     transition: 0.3s all ease-in;
     box-shadow: 0px 0px 20px 15px #3cc6d8;
-    background-color: #d7f3ff;
+    background-color: #1d1d1d;
   }
   h2 {
     padding: 120px 0px 15px 0px;
